# hoodle-persist

./: hoodle-persist.cabal
exe/: HoodlePersistServer.hs  test.hs
src/Hoodle/: Persist.hs
src/Hoodle/Persist/: Types.hs
